// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesTableTest render spinner for scanning state 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={true} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
    </div>
    <StyledCustomizedSpinner className=\\"details-view-spinner\\" size={3} label=\\"Scanning...\\" />
  </div>
</div>"
`;

exports[`IssuesTableTest render spinner, issuesEnabled == null 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <StyledCustomizedSpinner className=\\"details-view-spinner\\" size={3} label=\\"Loading...\\" />
</div>"
`;

exports[`IssuesTableTest render spinner, issuesEnabled.scanResult == null 1`] = `
<div
  className="issues-table"
>
  <h1>
    test title
  </h1>
  <div>
    <div
      className="details-view-command-bar"
    >
      <VisualizationToggle
        checked={Object {}}
        className="automated-checks-details-view-toggle"
        disabled={false}
        label="Show failures"
        visualizationName="Automated checks"
      />
    </div>
    <StyledCustomizedSpinner
      className="details-view-spinner"
      label="Loading data..."
      size={3}
    />
  </div>
</div>
`;

exports[`IssuesTableTest render table with 0 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
    </div>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 0 issues, export FF on 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <CustomizedActionButton iconProps={{...}} onClick={[Function: bound ]}>
        Export result
      </CustomizedActionButton>
    </div>
    <StyledCustomizedDialog hidden={true} onDismiss={[Function: bound ]} dialogContentProps={{...}} modalProps={{...}}>
      <TextField multiline={true} autoFocus={true} rows={8} resizable={false} onChanged={[Function: bound ]} value=\\"\\" ariaLabel=\\"Provide result description\\" autoAdjustHeight={false} underlined={false} borderless={false} onBeforeChange={[Function: onBeforeChange]} onNotifyValidationResult={[Function: onNotifyValidationResult]} onGetErrorMessage={[Function: onGetErrorMessage]} deferredValidationTime={200} errorMessage=\\"\\" validateOnFocusIn={false} validateOnFocusOut={false} validateOnLoad={true} />
      <StyledCustomizedDialogFooter>
        <StyledCustomizedLink onClick={[Function: bound ]} className=\\"download-report-link\\" download=\\"\\" href=\\"data:text/html,\\">
          Export
        </StyledCustomizedLink>
      </StyledCustomizedDialogFooter>
    </StyledCustomizedDialog>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 1 issue 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
    </div>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 1 issue, export FF on 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <CustomizedActionButton iconProps={{...}} onClick={[Function: bound ]}>
        Export result
      </CustomizedActionButton>
    </div>
    <StyledCustomizedDialog hidden={true} onDismiss={[Function: bound ]} dialogContentProps={{...}} modalProps={{...}}>
      <TextField multiline={true} autoFocus={true} rows={8} resizable={false} onChanged={[Function: bound ]} value=\\"\\" ariaLabel=\\"Provide result description\\" autoAdjustHeight={false} underlined={false} borderless={false} onBeforeChange={[Function: onBeforeChange]} onNotifyValidationResult={[Function: onNotifyValidationResult]} onGetErrorMessage={[Function: onGetErrorMessage]} deferredValidationTime={200} errorMessage=\\"\\" validateOnFocusIn={false} validateOnFocusOut={false} validateOnLoad={true} />
      <StyledCustomizedDialogFooter>
        <StyledCustomizedLink onClick={[Function: bound ]} className=\\"download-report-link\\" download=\\"\\" href=\\"data:text/html,\\">
          Export
        </StyledCustomizedLink>
      </StyledCustomizedDialogFooter>
    </StyledCustomizedDialog>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 2 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
    </div>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 2 issues, export FF on 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <CustomizedActionButton iconProps={{...}} onClick={[Function: bound ]}>
        Export result
      </CustomizedActionButton>
    </div>
    <StyledCustomizedDialog hidden={true} onDismiss={[Function: bound ]} dialogContentProps={{...}} modalProps={{...}}>
      <TextField multiline={true} autoFocus={true} rows={8} resizable={false} onChanged={[Function: bound ]} value=\\"\\" ariaLabel=\\"Provide result description\\" autoAdjustHeight={false} underlined={false} borderless={false} onBeforeChange={[Function: onBeforeChange]} onNotifyValidationResult={[Function: onNotifyValidationResult]} onGetErrorMessage={[Function: onGetErrorMessage]} deferredValidationTime={200} errorMessage=\\"\\" validateOnFocusIn={false} validateOnFocusOut={false} validateOnLoad={true} />
      <StyledCustomizedDialogFooter>
        <StyledCustomizedLink onClick={[Function: bound ]} className=\\"download-report-link\\" download=\\"\\" href=\\"data:text/html,\\">
          Export
        </StyledCustomizedLink>
      </StyledCustomizedDialogFooter>
    </StyledCustomizedDialog>
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" featureFlagData={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" />
      </div>
    </div>
  </div>
</div>"
`;
